Fix overlapping text

--- a/components/website/utils/Schedule/Table/Block/style.module.css
+++ b/components/website/utils/Schedule/Table/Block/style.module.css
@@ -14,7 +14,6 @@
   margin-left: 10px;
   position: relative;
   transition: 0.5s max-height;
-  max-height: 225px;
 }
 
 .clickable .gridBlock {
